<resources>
    <string name="app_name">Petr I Mazepa</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_download">Save</string>
    <string name="action_delete">Delete</string>

    <string name="title_activity_article">Article</string>
    <string name="swipe_again" translatable="false">Swipe again to load oldest articles</string>
    <string name="articles">Articles</string>
    <string name="news">News</string>
    <string name="saved">Saved</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="feedback">Send Feedback</string>
    <string name="run_fools">Run, you fools!</string>

    <string name="localization">Localization</string>
    <string name="language">Language</string>
    <string name="history">History</string>
    <string name="clearhistory">Clear History</string>
    <string name="display">Display</string>
    <string name="video">Inline Video</string>
    <string name="videodescription">If off, all inline videos will be replaced with links</string>


    <string-array name="entries">
        <item>Every week</item>
        <item>Every 15 days</item>
        <item>Every month</item>
    </string-array>
    <string-array name="entry_values">
        <item>7</item>
        <item>15</item>
        <item>30</item>
    </string-array>

    <string-array name="lang_entries">
        <item>English</item>
        <item>Русский</item>
    </string-array>
    <string-array name="lang_values">
        <item>en</item>
        <item>ru</item>
    </string-array>
    <string name="clearallhistory">Clear All Hisory</string>
    <string name="clearhistoryconfirm">Clear all history now?</string>
    <string name="ErrorNoNetwork">The network is not available. You can read Saved articles.</string>


    <string name="about_version">Application Version</string>
    <string name="about_version_value" translatable="false">0.94</string>
    <string name="about_copyright">Copyrights</string>
    <string name="about_copyright_value" translatable="false">© PETRIMAZEPA.COM, MMMMMMMDXXII - MMMMMMMDXXIV.</string>
    <string name="about_licenses">Open Source Licenses</string>
    <string name="about_link">Visit Site</string>
    <string name="about_link_value" translatable="false">http://petrimazepa.com</string>
</resources>
