<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      >

    <group android:id="@+id/group_navigation"
           android:checkableBehavior="single">
        <item
                android:id="@+id/nav_articles"
                android:icon="@mipmap/ic_library_books_black_48dp"
                android:title="@string/articles"/>
        <item
                android:id="@+id/nav_news"
                android:icon="@mipmap/ic_description_black_48dp"
                android:title="@string/news"/>
        <item
                android:id="@+id/nav_saved"
                android:icon="@mipmap/ic_save_black_48dp"
                android:title="@string/saved"/>

        </group>
    <group android:id="@+id/group_settings">
            <item
                    android:id="@+id/nav_settings"
                    android:icon="@mipmap/ic_settings_black_48dp"
                    android:title="@string/settings"/>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@mipmap/ic_feedback_black_48dp"
                android:title="@string/feedback"/>
            <item
                    android:id="@+id/nav_about"
                    android:icon="@mipmap/ic_help_black_48dp"
                    android:title="@string/about"/>

    </group>

</menu>
