<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/localization">
        <ListPreference
                android:entries="@array/lang_entries"
                android:entryValues="@array/lang_values"
                android:key="lang"
                android:summary="%s"
                android:title="@string/language"
                android:defaultValue="ru"
        >
        </ListPreference>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/history">
        <ListPreference
                android:entries="@array/entries"
                android:entryValues="@array/entry_values"
                android:key="clearhistory"
                android:summary="%s"
                android:title="@string/clearhistory"
                android:defaultValue="15">
        </ListPreference>
        <Preference android:title="@string/clearallhistory"
                    android:key="clearall"
        />
    </PreferenceCategory>

</PreferenceScreen>
