<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.dogzz.pim.screens.AboutFragment" android:orientation="vertical"
              android:showDividers="middle|beginning|end" android:theme="@style/Animation.AppCompat.Dialog"
              android:touchscreenBlocksFocus="false" android:transitionGroup="false">

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:text="@string/about_version"
            android:id="@+id/textVersion" android:layout_gravity="center_vertical" android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
            android:text="@string/about_version_value"
            android:id="@+id/textVersionValue" android:layout_gravity="center_vertical" android:textColor="@color/textColor"
            android:layout_marginLeft="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:text="@string/about_copyright"
            android:id="@+id/textCopyright" android:layout_marginTop="16dp" android:layout_marginLeft="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/about_copyright_value"
            android:id="@+id/textCopyrightValue" android:textColor="@color/textColor" android:layout_marginLeft="16dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:text="@string/about_link"
            android:id="@+id/textLink" android:layout_marginTop="16dp" android:layout_marginLeft="16dp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/about_link_value"
            android:autoLink="web"
            android:id="@+id/textLinkValue" android:textColor="@color/textColor" android:layout_marginLeft="16dp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:text="@string/about_licenses"
            android:id="@+id/textLicenses" android:layout_marginTop="16dp" android:layout_marginLeft="16dp"/>
    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
                android:layout_margin="8dp" android:layout_marginLeft="16dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="The product includes:"
                    android:id="@+id/textView"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="The Android Open Source Project"
                    android:id="@+id/textView1"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Project home page:"
                    android:id="@+id/textView6"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="http://source.android.com/"
                    android:autoLink="web"
                    android:id="@+id/textView2"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Copyright © 2005-2016 The Android Open Source Project
    The Android Open Source Project is licensed under the Apache License, Version 2.0 (the 'License').
    You may obtain a copy of the License at"
                    android:id="@+id/textView3"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="http://www.apache.org/licenses/LICENSE-2.0"
                    android:autoLink="web"
                    android:id="@+id/textView4"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an 'AS IS' BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License."
                    android:id="@+id/textView5"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Picasso"
                    android:id="@+id/textView11"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Project home page:"
                    android:id="@+id/textView16"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="http://square.github.io/picasso/"
                    android:autoLink="web"
                    android:id="@+id/textView12"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Copyright © 2016 Square, Inc.
    The Picasso is licensed under the Apache License, Version 2.0 (the 'License').
    You may obtain a copy of the License at"
                    android:id="@+id/textView13"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="http://www.apache.org/licenses/LICENSE-2.0"
                    android:autoLink="web"
                    android:id="@+id/textView14"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an 'AS IS' BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License."
                    android:id="@+id/textView15"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Jsoup"
                    android:id="@+id/textView21"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Project home page:"
                    android:id="@+id/textView26"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="https://jsoup.org/"
                    android:autoLink="web"
                    android:id="@+id/textView22"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Copyright © 2009 - 2016 Jonathan Hedley
    The Jsoup is licensed under the MIT license (the 'License'').
        You may obtain a copy of the License at"
                    android:id="@+id/textView23"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="https://jsoup.org/license"
                    android:autoLink="web"
                    android:id="@+id/textView24"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="THE SOFTWARE IS PROVIDED 'AS IS', WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE."
                    android:id="@+id/textView25"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
